--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.54.0",
+    "@tanstack/react-query": "^5.84.2",
     "next": "15.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0"
