--- a/components.json
+++ b/components.json
@@ -15,7 +15,7 @@
     "utils": "@/lib/utils",
     "ui": "@/components/ui",
     "lib": "@/lib",
-    "hooks": "@/hooks"
+    "hooks": "@/components/ui/hooks"
   },
   "iconLibrary": "lucide"
 }
